Fixes #188 Support for expand/collapse sequence addon items

--- a/shop/client/src/main/resources/assets/common/stylesheets/base.less
+++ b/shop/client/src/main/resources/assets/common/stylesheets/base.less
@@ -540,3 +540,9 @@ form .input-append .validation {
   background-image: url("/common/images/expand-icon.png");
   background-position: center center;
 }
+
+.icon-delete {
+  background-image: url("/common/images/remove-icon.png");
+  background-position: center center;
+  background-size: 14px;
+}
