--- a/shop/client/src/main/resources/assets/common/stylesheets/components.less
+++ b/shop/client/src/main/resources/assets/common/stylesheets/components.less
@@ -239,6 +239,44 @@ ul li.hoverable:hover .visible-when-hover {
   cursor: pointer;
 }
 
+/* Addons */
+
+.addon-sequence .icon-delete:hover {
+  cursor: pointer;
+}
+
+.addon-sequence .sequence-item {
+  padding-top: 10px;
+  border-bottom: 1px dashed #d3d3d3;
+}
+
+.addon-sequence .sequence-item:last-child {
+  border: none;
+}
+
+.addon-sequence .sequence-item .collapsed {
+  margin-top: -16px;
+  min-height: 25px;
+  max-width: 410px;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
+}
+
+.addon-sequence .sequence-item .collapsed img {
+  margin-bottom: 8px;
+  margin-right: 5px;
+}
+
+.addon-sequence .add-element.top {
+  margin-bottom: 7px;
+}
+
+
+.addon-sequence .add-element.bottom {
+  margin-top: 7px;
+}
+
 /* Thumbnail editor */
 
 .editImage {
